--- a/style.css
+++ b/style.css
@@ -1,93 +1,85 @@
-﻿:root {
-    --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
-    --white: #fff;
-    --gray: #6c757d;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
-    --light: #f8f9fa;
-    --dark: #343a40;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-  }
-  body {
-  }
-  a {
-  }
-  .field{
-    width: 2em ;
-    height: 2em;
-  }
-  #questionSidePanel{
-    border: 1px solid #e0e0e0;
-    box-shadow: 0px 3px 17px #dddd;
-    border-radius: 28px;
-  }
-  #questionDisplay{
-    padding: 35px;
-  }
-  #questionDisplay #questionSidePanel img{
-    background: #ececec;
-    border-radius: 20px;
-    padding: 7px;
-    margin: 11px;
-    border: 1px solid #ddd;
-  }
-  #questionDisplay #contentImage7{
-    margin: 0 auto !important;
-    box-shadow: -1px 0px 0px #343434;
-    border-radius: 3px;
-  }
-  #questionDisplay b{
-    text-align: center;
-    display: block;
-    padding: 20px;
-  }
-  #questionDisplay #eingabe{
-    border: 1px solid #dddd;
-    padding: 10px 30px;
-    border-radius: 3px;
-    background: #fbe2d1;
-  }
-  #questionDisplay .field {
-    float: left;
-    margin-bottom: 3px;
-    border: 1px solid #dddd;
-    box-shadow: 0px 0px 7px #c5c5c5;
-  }
 
-  .blink {
-    background: #ffd9d9;
-  }
+body{
+  background: #B2DFDB!important;
+}
+.card{
+  height: 50px!important;
+  width: 115px !important;
+  padding: 25px 0 40px !important;
+  vertical-align: middle !important;
+  font-size: 15px!important;
+  font-family: monospace!important;
+  color: #353535!important;
+  border: 1px solid #d2d2d2!important;
+  box-shadow: none !important;
+}
+.card .pin {
+  top: -7px !important;
+  background: rgb(46, 128, 233)!important;
+  box-shadow: none !important;
+}
 
-  #questionDisplay input[type=button]{
-    padding: 10px 30px;
-    border-radius: 3px;
-    background: #abee8c;
-    display: block !important;
-    width: 100%;
-    margin: 35px 0 0;
-  }
+.card .pin.orange {
+  background: rgb(255, 170, 32)!important;
+}
 
+/* check solve button */
+#checkSolutionBtn{
+  background: #b0e4b4!important;
+  color: #3b533d!important;
+  padding: 21px 23px!important;
+  width: 80px!important;
+  height: 80px!important;
+  box-shadow: 2px 2px 4px 1px #959595!important;
+  font-size: 30px!important;
+  border: 2px solid #3b533d!important;
+  margin: 5px 10px!important;
+}
+#checkSolutionBtn:hover{
+  background: #b0e4b4!important;
+  color: #3b533d!important;
+  padding: 21px 23px!important;
+  width: 80px!important;
+  height: 80px!important;
+  box-shadow: 2px 2px 4px 1px #959595!important;
+  font-size: 30px!important;
+  border: 2px solid #3b533d!important;
+  margin: 5px 10px!important;
+  opacity: 0.5!important;
+}
 
-
-
-  /* ************Responsive*************** */
-  @media (min-width: 768px) {
-  }
+/* meseage */
+#AppClientTaskPanel{
+  border-radius: 8px !important;
+  background-color: #ffffff!important;
+  border-top: 9px solid rgb(255, 158, 0)!important;
+  border-left: 1px solid #dddd!important;
+  border-right: 1px solid #dddd!important;
+  border-bottom: 1px solid #dddd!important;
+  padding: 25px!important;
+  -webkit-box-shadow:none !important;
+          box-shadow:none !important;
+}
+#AppClientTaskPanel p{
+  margin: 0 0 15px !important;
+  color: #2f2f2f!important;
+}
+#AppClientTaskPanel div{
+  color: #4c4c4c!important;
+  text-align: justify!important;
+}
+#AppClientTaskPanel div button{
+  font-size: 120%!important;
+  width: 100%!important;
+  margin: 25px 0 0!important;
+  padding: 5px!important;
+  border: none!important;
+  color: #fff!important;
+  background: rgb(15, 108, 227);
+  border-radius: 20px!important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+#AppClientTaskPanel div button:hover{
+  opacity: 0.5!important;       
+}
