--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
-
 body{
   background: #B2DFDB!important;
 }
 .card{
   height: 50px!important;
-  width: 115px !important;
-  padding: 20px 0 40px !important;
-  vertical-align: middle !important;
+  width: 115px!important;
+  padding: 30px 0 50px!important;
+  vertical-align: middle!important;
   font-size: 15px!important;
   font-family: monospace!important;
   color: #353535!important;
   border: 1px solid #d2d2d2!important;
-  box-shadow: none !important;
+  -webkit-box-shadow: none!important;
+          box-shadow: none!important;
+  border-radius: 20px!important;;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 .card .pin {
   top: -7px !important;
   background: rgb(46, 128, 233)!important;
-  box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 
 .card .pin.orange {
@@ -48,7 +54,8 @@ body{
   padding: 21px 23px!important;
   width: 80px!important;
   height: 80px!important;
-  box-shadow: 2px 2px 4px 1px #959595!important;
+  -webkit-box-shadow: 2px 2px 4px 1px #959595!important;
+          box-shadow: 2px 2px 4px 1px #959595!important;
   font-size: 30px!important;
   border: 2px solid #3b533d!important;
   margin: 5px 10px!important;
@@ -59,7 +66,8 @@ body{
   padding: 21px 23px!important;
   width: 80px!important;
   height: 80px!important;
-  box-shadow: 2px 2px 4px 1px #959595!important;
+  -webkit-box-shadow: 2px 2px 4px 1px #959595!important;
+          box-shadow: 2px 2px 4px 1px #959595!important;
   font-size: 30px!important;
   border: 2px solid #3b533d!important;
   margin: 5px 10px!important;
@@ -100,4 +108,18 @@ body{
 }
 #AppClientTaskPanel div button:hover{
   opacity: 0.5!important;       
+}
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
 }
