--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body{
   background: #B2DFDB!important;
 }
-.card{
+
+.card .vertical{
   height: 50px!important;
   width: 115px!important;
-  padding: 30px 0 50px!important;
+  padding: 30px 0 30px !important;
   vertical-align: middle!important;
   font-size: 15px!important;
   font-family: monospace!important;
@@ -18,7 +19,27 @@ body{
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
 }
+
+.card .horizontal{
+  width: 115px!important;
+  padding: 30px 0 30px !important;
+  vertical-align: middle!important;
+  font-size: 15px!important;
+  font-family: monospace!important;
+  color: #353535!important;
+  border: 1px solid #d2d2d2!important;
+  -webkit-box-shadow: none!important;
+          box-shadow: none!important;
+  border-radius: 20px!important;;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
 .card .pin {
+  width: 17px !important;
+  height: 17px !important;
   top: -7px !important;
   background: rgb(46, 128, 233)!important;
   -webkit-box-shadow: none !important;
