--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   background: #B2DFDB!important;
 }
 
-.card .vertical{
+.vertical{
   height: 50px!important;
   width: 115px!important;
   padding: 30px 0 30px !important;
@@ -20,7 +20,7 @@ body{
   -o-border-radius: 20px;
 }
 
-.card .horizontal{
+.horizontal{
   width: 115px!important;
   padding: 30px 0 30px !important;
   vertical-align: middle!important;
