--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 body{
   background: #B2DFDB!important;
 }
@@ -57,8 +64,9 @@ body{
 .resizeText{
   font-size: 1.2em!important;
   color: #353535!important;
-  text-align: justify !important;
-
+  text-align: center!important;
+  padding: 0 10px!important;
+  display: block!important;
 }
 
 /* hide modal */
@@ -151,7 +159,7 @@ body{
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
-    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
     background: -o-linear-gradient(top, white, black);
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
     background: linear-gradient(to bottom, white, black);
 }
