--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root {
   --light-tifany: #B2DFDB;
+  --light-orange-10:#ffcd7b;
   --light-orange:#ffaa20;
   --orange:#ff9e00;
   --light-blue:#2e80e9;
-  --blue :  #0f6ce3;
+  --blue : #0f6ce3;
   --light-gray-10: #f9f9f9;
   --light-gray: #d2d2d2;
   --gray:#959595;
@@ -12,7 +13,7 @@
   --black: #000000;
   --light-green:#b0e4b4;
   --dark-green:#3b533d;
-
+  --light-red:#ffacaa;
 }
 
 body{
@@ -99,17 +100,7 @@ body{
 }
 
 #checkSolutionBtn:hover{
-  background: #b0e4b4!important;
-  color: #3b533d!important;
-  padding: 21px 23px!important;
-  width: 80px!important;
-  height: 80px!important;
-  -webkit-box-shadow: none !important;
-          box-shadow: none!important;
-  font-size: 30px!important;
-  border: 2px solid #3b533d!important;
-  margin: 5px 10px!important;
-  opacity: 0.5!important;
+  opacity: 0.7!important;
 }
 
 /* meseage */
