--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
         --white : #ffffff;
         --light-black :#353535;
         --black: #000000;
+        --light-green-10: #edf9ec;
         --light-green:#b0e4b4;
         --dark-green:#3b533d;
         --light-red:#ffacaa;
@@ -81,7 +82,7 @@
 
     .card.correct {
         border: 2px solid var(--light-green)!important;
-        
+        background :var(--light-green-10)!important;
     }
     
     /* hide modal */
