--- a/style.css
+++ b/style.css
@@ -171,3 +171,8 @@
         background: linear-gradient(to bottom, var(--white),var(--black));
     }
     
+/* display none of full screen */
+#AppClientFullscreenButton{
+    display: none !important;
+}
+
